Teclas de Atalho e novo parágrafo
Inclusão de teclas de atalho e novo parágrafo no index.html

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,9 @@
     <h1>Teste</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit atque quae exercitationem harum ad aliquid? Qui, molestias? Doloribus cupiditate veniam, ipsam, at cumque delectus iusto ullam a laboriosam sapiente animi?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi nostrum ipsum nemo. Veritatis aperiam vel numquam vero magni, eligendi perspiciatis? Alias quis blanditiis architecto quisquam porro temporibus, sint reiciendis.
+        
+    </p>
     
 </body>
 </html>
